syntax = "proto3";

package auth.v1;

option go_package = "./auth";

import "core/proto/permission.proto";

service AuthService {
    rpc IssueAccessToken(IssueAccessTokenRequest) returns (IssueAccessTokenResponse);
    rpc DeleteAccessToken(DeleteAccessTokenRequest) returns (DeleteAccessTokenResponse);
    rpc VerifyAccessToken(VerifyAccessTokenRequest) returns (VerifyAccessTokenResponse);
    rpc IssueRefreshToken(IssueRefreshTokenRequest) returns (IssueRefreshTokenResponse);
    rpc DeleteRefreshToken(DeleteRefreshTokenRequest) returns (DeleteRefreshTokenResponse);
    rpc VerifyRefreshToken(VerifyRefreshTokenRequest) returns (VerifyRefreshTokenResponse);
}

message Claims {
    uint64 user_id = 1;
    repeated enums.Permission permissions = 2;
}

message IssueAccessTokenRequest {
    uint64 user_id = 1;
    repeated enums.Permission permissions = 2;
}

message IssueAccessTokenResponse {
    string access_token = 1;
}

message DeleteAccessTokenRequest {
    string access_token = 1;
}

message DeleteAccessTokenResponse {
}

message VerifyAccessTokenRequest {
    string access_token = 1;
}

message VerifyAccessTokenResponse {
    Claims claims = 1;
}

message IssueRefreshTokenRequest {
    uint64 user_id = 1;
    repeated enums.Permission permissions = 2;
}

message IssueRefreshTokenResponse {
    string refresh_token = 1;
}

message DeleteRefreshTokenRequest {
    string refresh_token = 1;
}

message DeleteRefreshTokenResponse {
}

message VerifyRefreshTokenRequest {
    string refresh_token = 1;
}

message VerifyRefreshTokenResponse {
    Claims claims = 1;
}
